# gvm_lights

./: .dockerignore  .gitignore  BUILD.md  Dockerfile  Dockerfile.client.py  Dockerfile.server  Dockerfile.server.arm64  README.md  docker-entrypoint-server.sh  docker-entrypoint.sh
.cargo/: config.toml
cli/: Cargo.toml
cli-py/: Cargo.toml
cli-py/src/: lib.rs
cli-py/tests/: test.py
cli/src/: client.rs  lib.rs  main.rs
cli_py/: Cargo.toml  pyproject.toml
gvm_lights/: Cargo.toml
gvm_lights/src/: ble_client.rs  client.rs  codec.rs  lib.rs
gvm_lights_lib/: Cargo.toml  LICENSE  README.md
gvm_lights_lib/src/: lib.rs
gvm_lights_lib/tests/: test.py
gvm_lights_pylib/: Cargo.toml  pyproject.toml
gvm_lights_pylib/src/: lib.rs
gvm_lights_pylib/tests/: test.py
gvm_server/: Cargo.toml
gvm_server/src/: gvm_node.rs  gvm_node_command.rs  gvm_node_consts.rs  gvm_node_encoder.rs  gvm_node_error.rs  gvm_node_mqtt.rs  gvm_node_status.rs  gvm_server.rs  gvm_server_codec.rs  gvm_server_consts.rs  gvm_server_custom.rs  gvm_server_error.rs  gvm_server_event.rs  gvm_server_mqtt.rs  gvm_server_mqtt_error.rs  gvm_server_mqtt_light_entity.rs  gvm_server_mqtt_options.rs  lib.rs  main.rs
protocol/: protocol.md  succ_on_off_1.pcapng  succ_on_off_2.pcapng
protocol/decomplied_apk/: CRC16.java  ControlUtil.java  MainActivity.java  UDPClient.java
proxy/: Cargo.toml
proxy/src/: main.rs
