[package]
name = "gvm_cli"
version = "0.1.0"
authors = ["Maxim Lukiyanov <maxiluk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "*"
gvm-lights = { path = "../gvm_lights" }

[dependencies.async-std]
version = "1.0.0"
features = ["attributes"]
