[package]
name = "gvm_cli"
version = "0.1.0"
authors = ["Maxim Lukiyanov <maxiluk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1"
gvm-lights = { path = "../gvm_lights" }
tokio = { version = "1", features = ["full"] }
pretty_env_logger = "0.4"
log = "0.4"
dotenv = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies.async-std]
version = "1.0.0"
features = ["attributes"]
