[package]
name = "gvm_cli"
version = "0.2.0"
authors = ["Maxim Lukiyanov <maxiluk@gmail.com>", "Rahel A <rahel@tuta.io>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2"
gvm_server = { path = "../gvm_server" }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tokio-stream = "0.1"
futures-sink = "0.3"
futures-util = "0.3"
futures = "0.3"
pretty_env_logger = "0.4"
log = "0.4"
dotenv = "0.15"
serde = { version = "1", features = ["derive"] }
bincode = "1.3"

[dependencies.async-std]
version = "1.0.0"
features = ["attributes"]
