[package]
name = "gvm-lights"
version = "0.1.0"
authors = ["Maxim Lukiyanov <maxiluk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc-any = "2.3"
hex = "0.3"
log = "*"
tokio = { version = "1", features = ["full"] }
btleplug = { version = "0.9", features = ["serde"] }
itertools = "*"
uuid = "*"

[dependencies.async-std]
version = "1.0.0"
features = ["attributes"]
