[package]
name = "gvm_lights"
version = "0.1.0"
authors = ["Maxim Lukiyanov <maxiluk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc-any = "2.3"
hex = "0.4"
tokio = { version = "1", features = ["full"] }
btleplug = { version = "0.9", features = ["serde"] }
itertools = "0.10"
uuid = "0.8"
log = "0.4"
futures = "0.3"
serde = { version = "1", features = ["derive"] }

[dependencies.async-std]
version = "1.0.0"
features = ["attributes"]
