[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"

[project]
name = "gvm_lights_lib"
version = "0.2.0"
author = ["Rahel A"]
author_email = ["<rahel@tuta.io>"]
edition = "2021"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

