[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"

[project]
name = "gvm_lights_lib"
version = "0.2.0"
authors = [
    { name="Rahel A", email="rahel@tuta.io" },
]
edition = "2021"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/rahel-a/gvm_lights"
"Bug Tracker" = "https://github.com/rahel-a/gvm_lights/issues"
