[package]
name = "gvm_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gvm_lights = { path = "../gvm_lights" }
tokio = { version = "1", features = ["full"] }
pretty_env_logger = "0.4"
log = "0.4"
dotenv = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
