[package]
name = "gvm_server"
version = "0.2.0"
authors = ["Rahel A <rahel@tuta.io>"]
edition = "2021"

[dependencies]
gvm_lights = { path = "../gvm_lights" }
tokio = { version = "1", features = ["full"] }
pretty_env_logger = "0.4"
log = "0.4"
dotenv = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
