[package]
name = "gvm_server"
version = "0.3.0"
authors = ["Rahel A <rahel@tuta.io>"]
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1"
bytes = "1.4"
futures-sink = "0.3"
futures-util = "0.3"
pretty_env_logger = "0.4"
log = "0.4"
dotenv = "0.15"
serde = { version = "1", features = ["derive"] }
bincode = "1.3"


# For gvm_node
crc-any = "2.3"
hex = "0.4"
btleplug = { version = "0.11", features = ["serde"] }
itertools = "0.10"
uuid = "1"
futures = "0.3"

[dependencies.async-std]
version = "1.12.0"
features = ["attributes"]
