[package]
name = "proxy"
version = "0.1.0"
authors = ["Maxim Lukiyanov <maxiluk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.23", features = ["full", "tracing"] }
futures = "0.3"
bluster = { git = "https://github.com/dfrankland/bluster" }
uuid = "0.8.1"
pretty_env_logger = "0.2"
